# wav2mp3

./: .gitignore  CMakeLists.txt  README  main.cpp
lib/: config.h  lame.vcxproj
src/: dataprocessor.cpp  dataprocessor.h  filereader.cpp  filereader.h  filewriter.cpp  filewriter.h  iodevice.h  main.cpp
win/: CMakeLists.txt
